@@ -19,6 +19,8 @@
 
 #include <QFlags>
 #include <QDir>
+#include <QMutexLocker>
+#include <QtConcurrentRun>
 #include <MApplicationIfProxy>
 #include <MDesktopEntry>
 #include "mfiledatastore.h"
@@ -28,11 +30,13 @@
 #include "launcherbutton.h"
 
 static const char* const FILE_FILTER = "*.desktop";
+static const int DATASTORE_WRITE_TIMEOUT = 500;
 
 Launcher::Launcher(MWidget *parent) :
     MWidgetController(new LauncherModel, parent),
     dataStore_(NULL),
-    initialized(false)
+    initialized(false),
+    updateButtonsMutex(QMutex::Recursive)
 {
     supportedDesktopEntryFileTypes << "Application";
 }
@@ -51,13 +55,12 @@ void Launcher::activateLauncher()
         // Update the button list according to watched directories
         updateButtonList();
 
-        // Listen for changes in ordering data
-        connect(dataStore_, SIGNAL(dataStoreChanged()), this, SLOT(restoreButtonsFromDataStore()));
 
         // Start watching the applications directory for changes
         connect(&watcher, SIGNAL(directoryChanged(const QString)), this, SLOT(updateButtonList()));
         watcher.addPath(APPLICATIONS_DIRECTORY);
-
+        connect(&updateButtonsTimer, SIGNAL(timeout()),
+                this, SLOT(startButtonStoreThread()));
         // The launcher has now been initialized
         initialized = true;
     }
@@ -125,8 +128,8 @@ void Launcher::updateButtonList()
         }
     }
     model()->setLauncherPages(pages);
-
-    updateButtonsInDataStore();
+    updateButtonsTimer.setSingleShot(true);
+    updateButtonsTimer.start(DATASTORE_WRITE_TIMEOUT);
 }
 
 bool Launcher::contains(const QString &desktopEntryFile)
@@ -225,7 +228,15 @@ bool Launcher::startMApplication(const QString &serviceName)
 
 void Launcher::updateButtonsInDataStore()
 {
+    QMutexLocker guard(&updateButtonsMutex);
+    // disconnect the signal first so that change notifications don't
+    // happen when updating
+    disconnect(dataStore_, SIGNAL(dataStoreChanged()),
+               this, SLOT(restoreButtonsFromDataStore()));
     dataStore()->updateLauncherButtons(model()->launcherPages());
+    // Listen for changes in ordering data
+    connect(dataStore_, SIGNAL(dataStoreChanged()),
+            this, SLOT(restoreButtonsFromDataStore()));
 }
 
 void Launcher::restoreButtonsFromDataStore()
@@ -238,6 +249,11 @@ void Launcher::restoreButtonsFromDataStore()
 	}
     }
     model()->setLauncherPages(restoredPages);
+}
+
+void Launcher::startButtonStoreThread()
+{
+    QtConcurrent::run(this, &Launcher::updateButtonsInDataStore);
 }
 
 void Launcher::connectLauncherButton(LauncherButton* launcherButton)
