@@ -24,6 +24,7 @@ class LauncherStub : public StubBase {
   virtual bool contains(const QString &desktopEntryFile);
   virtual void updateButtonsInDataStore();
   virtual void restoreButtonsFromDataStore();
+  virtual void startButtonStoreThread();
   virtual void addNewLauncherButton(const MDesktopEntry &entry);
   virtual bool isDesktopEntryValid(const MDesktopEntry &entry, const QStringList &acceptedTypes);
 }; 
@@ -110,6 +111,10 @@ void LauncherStub::restoreButtonsFromDataStore() {
   stubMethodEntered("restoreButtonsFromDataStore");
 }
 
+void LauncherStub::startButtonStoreThread() {
+  stubMethodEntered("startButtonStoreThread");
+}
+
 void LauncherStub::addNewLauncherButton(const MDesktopEntry &entry) {
   QList<ParameterBase*> params;
   params.append( new Parameter<const MDesktopEntry & >(entry));
@@ -193,6 +198,9 @@ void Launcher::restoreButtonsFromDataStore() {
   gLauncherStub->restoreButtonsFromDataStore();
 }
 
+void Launcher::startButtonStoreThread() {
+  gLauncherStub->startButtonStoreThread();
+}
 void Launcher::addNewLauncherButton(const MDesktopEntry &entry) {
   gLauncherStub->addNewLauncherButton(entry);
 }
